keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ingress-basic
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ingress-basic
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - image: quay.io/keycloak/keycloak:12.0.3
        name: keycloak
        ports:
        - containerPort: 8080
          name: keycloak
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
